--- a/calendar/calendario-base/css/calendar.css
+++ b/calendar/calendario-base/css/calendar.css
@@ -1,4 +1,26 @@
-.page .calendar {
+.calendar {
+	color: var(--gray20);
+	padding-inline: 1.5rem;
+	--minBlockSize: 4rem;
+	--maxBlockSize: auto;
+	--minInlineSize: 10rem;
+	--maxInlineSize: 5rem;
+}
+
+.calendarWeek {
+	display: grid;
 	border: 5px solid purple;
 	grid-area: calendar;
+	grid-template-columns: auto repeat(
+			7,
+			minmax(var(--minInlineSize), var(--maxInlineSize))
+		);
+	grid-template-rows: 7.75rem repeat(
+			24,
+			minmax(var(--minBlockSize), var(--maxBlockSize))
+		);
+	min-block-size: 700px;
+}
+
+.calendarDay {
 }
