Cabecera de timezone

--- a/calendar/calendario-base/css/calendar.css
+++ b/calendar/calendario-base/css/calendar.css
@@ -1,6 +1,7 @@
 @import url(./task.css);
 @import url(./task-cell.css);
 @import url(./calendar-day.css);
+@import url(./timezone-cell.css);
 
 .calendar {
 	color: var(--gray20);
