Estado del calendario

--- a/calendar/calendario-base/css/global.css
+++ b/calendar/calendario-base/css/global.css
@@ -9,6 +9,7 @@
 	--red10: #e8453c;
 	--green10: #33b679;
 	--blue30: #1967d2;
+	--alfgow: #a5c71b;
 	--body1-regular: 400 0.875rem/1.25rem Roboto;
 	--body1-medium: 500 0.875rem/1.25rem Roboto;
 	--body3-medium: 500 0.625rem/0.5rem Roboto;
