--- a/calendar/calendario-base/css/index.css
+++ b/calendar/calendario-base/css/index.css
@@ -2,3 +2,6 @@
 @import url(./global.css);
 @import url(./icons.css);
 @import url(./page.css);
+@import url(./button.css);
+@import url(./select.css);
+@import url(./calendar-status.css);
