--- a/calendar/calendario-base/css/select.css
+++ b/calendar/calendario-base/css/select.css
@@ -8,5 +8,5 @@
 	appearance: none;
 	background-image: url(../icons/icon-down.svg);
 	background-repeat: no-repeat;
-	background-position: right center;
+	background-position: right 0.5rem center;
 }
