--- a/calendar/calendario-base/css/index.css
+++ b/calendar/calendario-base/css/index.css
@@ -6,3 +6,5 @@
 @import url(./select.css);
 @import url(./calendar-status.css);
 @import url(./mini-calendar.css);
+@import url(./modal.css);
+@import url(./input.css);
