--- a/calendar/calendario-base/css/sidebar.css
+++ b/calendar/calendario-base/css/sidebar.css
@@ -1,4 +1,8 @@
 .sidebar {
 	border: 5px solid yellow;
 	grid-area: sidebar;
+	display: flex;
+	flex-direction: column;
+	gap: 1.5rem;
+	padding: 1.5rem;
 }
