--- a/calendar/calendario-base/css/task-cell.css
+++ b/calendar/calendario-base/css/task-cell.css
@@ -4,9 +4,9 @@
 	padding: 0.25rem;
 }
 
-.taskCell:nth-child(8) {
+/* .taskCell:nth-child(8) {
 	border-inline-end: 1px solid currentColor;
-}
+} */
 
 .taskCell.is-active::before {
 	content: "(Sin Título)";
